--- a/template/Makefile
+++ b/template/Makefile
@@ -4,7 +4,7 @@ include @@THEOS@@/makefiles/common.mk
 TWEAK_NAME = @@PROJECTNAME@@
 @@PROJECTNAME@@_FILES = Tweak.xm
 
-@@PROJECTNAME@@_LDFLAGS += -Flib -lsqlite3 -lc++
+@@PROJECTNAME@@_LDFLAGS += -F. -lsqlite3 -lc++
 @@PROJECTNAME@@_FRAMEWORKS += UIKit JavaScriptCore Cycript
 
 include $(THEOS_MODULE_PATH)/jailed/jailed.mk
