Improve importing of Cycript

--- a/template/Makefile
+++ b/template/Makefile
@@ -3,6 +3,7 @@ include @@THEOS@@/makefiles/common.mk
 TWEAK_NAME = @@PROJECTNAME@@
 @@PROJECTNAME@@_FILES = Tweak.xm
 
+@@PROJECTNAME@@_CFLAGS += -F.
 @@PROJECTNAME@@_LDFLAGS += -F. -lsqlite3 -lc++
 @@PROJECTNAME@@_FRAMEWORKS += UIKit JavaScriptCore Cycript
 
