Change method of using Cycript

--- a/template/Makefile
+++ b/template/Makefile
@@ -3,8 +3,6 @@ include @@THEOS@@/makefiles/common.mk
 TWEAK_NAME = @@PROJECTNAME@@
 @@PROJECTNAME@@_FILES = Tweak.xm
 
-@@PROJECTNAME@@_CFLAGS += -F.
-@@PROJECTNAME@@_LDFLAGS += -F. -lsqlite3 -lc++
-@@PROJECTNAME@@_FRAMEWORKS += JavaScriptCore Cycript
+CYPORT = 31337
 
 include $(THEOS_MODULE_PATH)/jailed/jailed.mk
