Made Cycript a separate dylib

--- a/template/Makefile
+++ b/template/Makefile
@@ -3,6 +3,6 @@ include @@THEOS@@/makefiles/common.mk
 TWEAK_NAME = @@PROJECTNAME@@
 @@PROJECTNAME@@_FILES = Tweak.xm
 
-CYPORT = 31337
+USE_CYCRIPT = 1
 
 include $(THEOS_MODULE_PATH)/jailed/jailed.mk
