--- a/template/Makefile
+++ b/template/Makefile
@@ -2,6 +2,7 @@ include @@THEOS@@/makefiles/common.mk
 
 TWEAK_NAME = @@PROJECTNAME@@
 @@PROJECTNAME@@_FILES = Tweak.xm
+@@PROJECTNAME@@_IPA = @@IPA@@
 
 USE_CYCRIPT = 1
 
