--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "module/fishhook"]
-	path = module/fishhook
+	path = module/lib/fishhook
 	url = https://github.com/facebook/fishhook.git
