Use the proper module format and `make package install` instead of `make ipa deploy`
Woo!

--- a/template/Makefile
+++ b/template/Makefile
@@ -1,7 +1,8 @@
+MODULES += jailed
 include @@THEOS@@/makefiles/common.mk
 
 TWEAK_NAME = @@PROJECTNAME@@
 @@PROJECTNAME@@_FILES = Tweak.xm
 @@PROJECTNAME@@_IPA = @@IPA@@
 
-include $(THEOS_MODULE_PATH)/jailed/jailed.mk
+include $(THEOS_MAKE_PATH)/tweak.mk
