Add an easy way to change the Bundle ID and Display Name

--- a/template/Makefile
+++ b/template/Makefile
@@ -2,6 +2,9 @@ MODULES += jailed
 include @@THEOS@@/makefiles/common.mk
 
 TWEAK_NAME = @@PROJECTNAME@@
+BUNDLE_ID = @@PACKAGENAME@@
+DISPLAY_NAME = @@FULLPROJECTNAME@@
+
 @@PROJECTNAME@@_FILES = Tweak.xm
 @@PROJECTNAME@@_IPA = @@IPA@@
 
