--- a/template/Makefile
+++ b/template/Makefile
@@ -1,9 +1,9 @@
-MODULES += jailed
+MODULES = jailed
 include @@THEOS@@/makefiles/common.mk
 
 TWEAK_NAME = @@PROJECTNAME@@
-BUNDLE_ID = @@PACKAGENAME@@
 DISPLAY_NAME = @@FULLPROJECTNAME@@
+BUNDLE_ID = @@PACKAGENAME@@
 
 @@PROJECTNAME@@_FILES = Tweak.xm
 @@PROJECTNAME@@_IPA = @@IPA@@
