Add a simpler way to embed frameworks/libraries

--- a/addons/cycript/Makefile
+++ b/addons/cycript/Makefile
@@ -1,10 +1,10 @@
-include $(CURDIR)/../addon.mk
+include ../addon.mk
 
 TWEAK_NAME = Cycript
 Cycript_FILES = Tweak.xm
 
-Cycript_CFLAGS += -F.
-Cycript_LDFLAGS += -F. -lsqlite3 -lc++ -stdlib=libstdc++
-Cycript_FRAMEWORKS += JavaScriptCore Cycript
+Cycript_LDFLAGS = -stdlib=libstdc++
+Cycript_LIBRARIES = c++
+Cycript_FRAMEWORKS = JavaScriptCore Cycript
 
 include $(THEOS_MAKE_PATH)/tweak.mk
