--- a/addons/flex/Makefile
+++ b/addons/flex/Makefile
@@ -1,10 +1,10 @@
-include $(CURDIR)/../addon.mk
+include ../addon.mk
 
 TWEAK_NAME = FLEX
 FLEX_FILES = Tweak.xm $(wildcard FLEX/*.m)
 
 FLEX_OBJCFLAGS = -fobjc-arc -Wno-objc-property-no-attribute
-FLEX_LDFLAGS = -lsqlite3 -lz
+FLEX_LIBRARIES = sqlite3 z
 
 include $(THEOS_MAKE_PATH)/tweak.mk
 
