Add the `/*` back to linguist-vendored

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-module/lib linguist-vendored
-addons/cycript/Cycript.framework linguist-vendored
+module/lib/* linguist-vendored
+addons/cycript/Cycript.framework/* linguist-vendored
